--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile "com.android.support:appcompat-v7:$SUPPORTVERSION"
-
     compile "com.android.support:recyclerview-v7:$SUPPORTVERSION"
-    compile "io.reactivex.rxjava2:rxjava:2.1.14"
+    compile 'io.reactivex.rxjava2:rxjava:2.1.14'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    compile files('libs/gson-2.7.jar')
 
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.facebook.stetho:stetho:1.5.0'
 }
