--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ android {
 //        jackOptions {
 //            enabled true
 //        }
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
 
     buildTypes {
@@ -42,4 +43,10 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.facebook.stetho:stetho:1.5.0'
+
+    //测试框架
+
+    androidTestCompile 'com.android.support.test:runner:0.5' ;
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+    androidTestCompile 'org.hamcrest:hamcrest-integration:1.3'
 }
