--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.14'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
     compile files('libs/gson-2.7.jar')
-
+    compile 'com.tamic.novate:novate:1.5.5'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.facebook.stetho:stetho:1.5.0'
