--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.5.0'
 //    compile 'com.zhy:autolayout:1.4.3'
 
+    compile 'com.orhanobut:logger:2.1.1'
     //测试框架
 
     androidTestCompile 'com.android.support.test:runner:0.5' ;
