--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,20 @@
 apply plugin: 'com.android.library'
+
+import org.aspectj.bridge.IMessage
+import org.aspectj.bridge.MessageHandler
+import org.aspectj.tools.ajc.Main
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'org.aspectj:aspectjtools:1.8.9'
+        classpath 'org.aspectj:aspectjweaver:1.8.9'
+    }
+}
+
 android {
     compileSdkVersion Integer.valueOf(project.compileSdkVersion)
     buildToolsVersion project.buildToolsVersion
@@ -21,13 +37,48 @@ android {
     }
 
 }
+android.libraryVariants.all { variant ->
+    JavaCompile javaCompile = variant.javaCompile
+    javaCompile.doLast {
+        String[] args = [
+                "-showWeaveInfo",
+                "-1.5",
+                "-inpath", javaCompile.destinationDir.toString(),
+                "-aspectpath", javaCompile.classpath.asPath,
+                "-d", javaCompile.destinationDir.toString(),
+                "-classpath", javaCompile.classpath.asPath,
+                "-bootclasspath", android.bootClasspath.join(File.pathSeparator)
+        ]
 
+        MessageHandler handler = new MessageHandler(true);
+        new Main().run(args, handler)
+
+        def log = project.logger
+        for (IMessage message : handler.getMessages(null, true)) {
+            switch (message.getKind()) {
+                case IMessage.ABORT:
+                case IMessage.ERROR:
+                case IMessage.FAIL:
+                    log.error message.message, message.thrown
+                    break;
+                case IMessage.WARNING:
+                case IMessage.INFO:
+                    log.info message.message, message.thrown
+                    break;
+                case IMessage.DEBUG:
+                    log.debug message.message, message.thrown
+                    break;
+            }
+        }
+    }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile "com.android.support:appcompat-v7:$SUPPORTVERSION"
     compile "com.android.support:recyclerview-v7:$SUPPORTVERSION"
     compile 'io.reactivex.rxjava2:rxjava:2.1.14'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    compile 'org.aspectj:aspectjrt:1.8.9'
 //    compile files('libs/gson-2.7.jar')
     compile 'com.tamic.novate:novate:1.5.5'
     compile 'org.greenrobot:eventbus:3.0.0'
