--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-kapt"
-//apply plugin: "com.vanniktech.maven.publish"
-apply from:project.file("publish.gradle")
+apply plugin: "com.vanniktech.maven.publish"
+//apply from:project.file("publish.gradle")
 android {
     compileSdkVersion 33
  //   buildToolsVersion project.buildToolsVersion
