--- a/build.gradle
+++ b/build.gradle
@@ -121,7 +121,9 @@ dependencies {
     api "com.github.chenBingX:SuperTextView:v3.2.5"
     api "com.imuxuan:floatingview:1.6"
     api "com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.11"
-   
+    api 'com.google.android:flexbox:1.0.0'
+    api ("io.github.molihuan:pathselector:1.1.14")
+
     //util
     api 'com.blankj:utilcodex:1.30.6'
     api "com.google.code.gson:gson:${gson}"
