--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.lu.library" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -6,6 +7,7 @@
 
     <application
         android:networkSecurityConfig="@xml/network_config"
+        tools:replace="android:networkSecurityConfig"
         >
 
         <provider
@@ -14,6 +16,7 @@
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
+                tools:replace="android:resource"
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/filepaths" />
         </provider>
